자 대문자로 바꿨습니다.

--- a/Project1/mainpage.html
+++ b/Project1/mainpage.html
@@ -7,22 +7,22 @@
     <link href = "stylemain.css" rel="stylesheet">
 </head>
 <body>
-    <div class="mainpage">
+    <div class="mainPage">
         <div class = "menu">
             <div></div>
             <div><a class = "menuLogo"><a href = "mainpage.html"><img class = "menuLogoPng" src="로고사진.png"></a></div>
             <div class = "inSidePage">
-                <div><b>인기강의</b></div>
-                <div><b>카테고리</b></div>
-                <div><b>ABOUT US</b></div>
+                <div><h4>인기강의</h4></div>
+                <div><h5>카테고리</h5></div>
+                <div><h5>ABOUT US</h5></div>
             </div>
             <div class = "searchBar">
-                <hi>Search</hi>
+                <h5>Search</h5>
             </div>
             <div></div>
             <div class = "signUpceateAccount">
-                <div><b>로그인</b></div>
-                <div><b>회원가입</b></div>
+                <div><h5>로그인</h5></div>
+                <div><h5>회원가입</h5></div>
             </div>
             <div></div>
         </div>
