검색바 수정

--- a/Project1/Login.html
+++ b/Project1/Login.html
@@ -10,7 +10,7 @@
     <form action="login.php" method="POST">
 
         <div class="icon">
-            <img src="아이템 로고.png">
+            <a href = "mainpage.html"><img src="아이템 로고.png"></a>
         </div>
 
         <input type="text" id="username" name="username" placeholder="아이디를 입력하세요" required>
