--- a/Project1/mainpage.html
+++ b/Project1/mainpage.html
@@ -10,18 +10,20 @@
     <div class="mainPage">
         <div class = "menu">
             <div></div>
-            <div><a class = "menuLogo"><a href = "mainpage.html"><img class = "menuLogoPng" src="로고사진.png"></a></div>
+            <div><a class = "menuLogo"><a href = "mainpage.html">
+                <img class = "menuLogoPng" src="아이템 로고.png">
+            </a></div>
             <div class = "inSidePage">
-                <div><h4>인기강의</h4></div>
+                <div><h5>인기강의</h5></div>
                 <div><h5>카테고리</h5></div>
                 <div><h5>ABOUT US</h5></div>
             </div>
-            <div class = "searchBar">
-                <h5>Search</h5>
-            </div>
+            <div class="searchBar">
+                <input type="text" placeholder="Search" required>
+            </div>            
             <div></div>
             <div class = "signUpceateAccount">
-                <div><h5>로그인</h5></div>
+                <div><a href = "Login.html"><h5>로그인</h5></a></div>
                 <div><h5>회원가입</h5></div>
             </div>
             <div></div>
