--- a/Project1/mainpage.html
+++ b/Project1/mainpage.html
@@ -14,12 +14,13 @@
                 <img class = "menuLogoPng" src="아이템 로고.png">
             </a></div>
             <div class = "inSidePage">
-                <div><h5>인기강의</h5></div>
+                <div><a href = "Bestpick.html"><h5>인기강의</h5></a></div>
                 <div><h5>카테고리</h5></div>
                 <div><h5>ABOUT US</h5></div>
             </div>
             <div class="searchBar">
-                <input type="text" placeholder="Search" required>
+                <input type="text" id="searchInput" placeholder="Search" required>
+                <div id="searchIcon">🔍</div>
             </div>            
             <div></div>
             <div class = "signUpceateAccount">
