메인페이지에서 상세페이지로

--- a/Project1/mainpage.html
+++ b/Project1/mainpage.html
@@ -10,13 +10,13 @@
     <div class="mainPage">
         <div class = "menu">
             <div></div>
-            <div><a class = "menuLogo"><a href = "mainpage.html">
+            <div><a class = "menuLogo"><a href = "mainPage.html">
                 <img class = "menuLogoPng" src="아이템 로고.png">
             </a></div>
             <div class = "inSidePage">
-                <div><a href = "Bestpick.html"><h5>인기강의</h5></a></div>
-                <div><h5>카테고리</h5></div>
-                <div><h5>ABOUT US</h5></div>
+                <div><a href = "bestPick.html"><h5>인기강의</h5></a></div>
+                <div><a href = "category.html"><h5>카테고리</h5></a></div>
+                <div><a href = "aboutUs.html"><h5>ABOUT US</h5></a></div>
             </div>
             <div class="searchBar">
                 <input type="text" id="searchInput" placeholder="Search" required>
@@ -24,7 +24,7 @@
             </div>            
             <div></div>
             <div class = "signUpceateAccount">
-                <div><a href = "Login.html"><h5>로그인</h5></a></div>
+                <div><a href = "login.html"><h5>로그인</h5></a></div>
                 <div><h5>회원가입</h5></div>
             </div>
             <div></div>
