--- a/Project1/Bestpick.html
+++ b/Project1/Bestpick.html
@@ -28,5 +28,9 @@
         </div>
         <div></div>
     </div>
+
+    <div class="bestPick">
+        <h2>| 인기강의</h2>
+    </div>
 </body>
 </html>
