어제까지 바뀐거

--- a/Project1/mainpage.html
+++ b/Project1/mainpage.html
@@ -25,7 +25,7 @@
             <div></div>
             <div class = "signUpceateAccount">
                 <div><a href = "login.html"><h5>로그인</h5></a></div>
-                <div><h5>회원가입</h5></div>
+                <div><a href = "signIn.html"><h5>회원가입</h5></a></div>
             </div>
             <div></div>
         </div>
