--- a/Project1/Login.html
+++ b/Project1/Login.html
@@ -16,10 +16,13 @@
         <input type="text" id="username" name="username" placeholder="아이디를 입력하세요" required>
         <input type="password" id="password" name="password" placeholder="비밀번호를 입력하세요" required>  
 
-        <button type="submit">Login</button>
+        <a href = "mainPage.html"><button type="submit">Login</button></a>
 
         <div class="mentForAccount">
-            <div class="NoAccout">계정이 없으신가요?</div><div class="signIn">회원가입</div>
+            <div class="NoAccout">계정이 없으신가요?</div>
+            <a href = "signIn.html">
+                <div class="signIn">회원가입</div>
+            </a>
         </div>
     </form>
 </body>
