--- a/Project1/SignIn.html
+++ b/Project1/SignIn.html
@@ -9,7 +9,7 @@
 <body>
 <form action="/register" method="POST">
     <div class="icon">
-        <img src="아이템 로고.png">
+        <a href = "mainPage.html"><img src="아이템 로고.png"></a>
     </div>
     <label for="useremail">이메일</label>
     <input type="email" id="email" name="email" placeholder="@gmail.com" required><br>
@@ -38,7 +38,7 @@
         여성
     </label><br>
     </div>
-        <button class="accession" type="submit">가입하기</button>
+        <a href = "mainPage.html"><button class="accession" type="submit">가입하기</button></a>
     </form>
 </form>
 </body>
