--- a/Project1/aboutUs.html
+++ b/Project1/aboutUs.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href = "aboutus.css" rel="stylesheet">
+    <link href = "stylemain.css" rel="stylesheet">
 </head>
 <body>
     <div class = "menu">
@@ -19,7 +19,7 @@
         </div>
         <div class="searchBar">
             <input type="text" id="searchInput" placeholder="Search" required>
-            <div id="searchIcon"></div>
+            <div id="searchIcon">🔍</div>
         </div>            
         <div></div>
         <div class = "signUpceateAccount">
@@ -28,13 +28,5 @@
         </div>
         <div></div>
     </div>
-    <h1 class="us">소개글</h1>
-    <div class="box1">IT은 전기 통신, 방송, 컴퓨팅
-        (정보처리, 컴퓨터 네트워크, 컴퓨터 하드웨어, 컴퓨터 소프트웨어, 멀티미디어) 
-        통신망 등 사회 기반을 형성하는 유형 및 무형의 기술 분야이다.</div>
-    <h1 class="title">ITEM 관련 사이트</h1>
-    <div class="box2">
-        ITEM 유튜브: <a href="https://www.youtube.com/@ITEM-2414" target="_blank">
-        https://www.youtube.com/@ITEM-2414
 </body>
 </html>
