--- a/Project1/Bestpick.html
+++ b/Project1/Bestpick.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>인기강의</title>
-    <link href = "stylemain.css" rel="stylesheet">
+    <link href = "styleForPick.css" rel="stylesheet">
 </head>
 <body>
     <div class = "menu">
@@ -30,7 +30,76 @@
     </div>
 
     <div class="bestPick">
-        <h2>| 인기강의</h2>
+        <h2>인기강의</h2>
+
+        <div class="course-card-container">
+            <article class="course-card">
+                <div class="course-image">
+                    <img src="thumnail.png" alt="강의 썸네일 1">
+                </div>
+                <div class="course-title">
+                    <h3>강의 제목 1</h3>
+                </div>
+                <div class="realDiscription">
+                    <p>여기에 강의 설명이 들어갑니다.</p>
+                </div>
+            </article>
+        </div>
+
+        <div class="course-card-container">
+            <article class="course-card">
+                <div class="course-image">
+                    <img src="thumnail.png" alt="강의 썸네일 2">
+                </div>
+                <div class="course-title">
+                    <h3>강의 제목 2</h3>
+                </div>
+                <div class="realDiscription">
+                    <p>여기에 강의 설명이 들어갑니다.</p>
+                </div>
+            </article>
+        </div>
+
+        <div class="course-card-container">
+            <article class="course-card">
+                <div class="course-image">
+                    <img src="thumnail.png" alt="강의 썸네일 3">
+                </div>
+                <div class="course-title">
+                    <h3>강의 제목 3</h3>
+                </div>
+                <div class="realDiscription">
+                    <p>여기에 강의 설명이 들어갑니다.</p>
+                </div>
+            </article>
+        </div>
+
+        <div class="course-card-container">
+            <article class="course-card">
+                <div class="course-image">
+                    <img src="thumnail.png" alt="강의 썸네일 3">
+                </div>
+                <div class="course-title">
+                    <h3>강의 제목 4</h3>
+                </div>
+                <div class="realDiscription">
+                    <p>여기에 강의 설명이 들어갑니다.</p>
+                </div>
+            </article>
+        </div>
+        <div class="course-card-container">
+            <article class="course-card">
+                <div class="course-image">
+                    <img src="thumnail.png" alt="강의 썸네일 3">
+                </div>
+                <div class="course-title">
+                    <h3>강의 제목 5</h3>
+                </div>
+                <div class="course-discription">
+                    <p class="realDiscription">여기에 강의 설명이 들어갑니다.</p>
+                </div>
+            </article>
+        </div>
     </div>
 </body>
 </html>
