--- a/Project1/mainpage.html
+++ b/Project1/mainpage.html
@@ -30,5 +30,8 @@
             <div></div>
         </div>
     </div>
+
+    <div class = "justBitEmpty"></div>
+    <div class = downBar67fgtv5njfbvgn r5   ></div>
 </body>
 </html>
