저 오늘 바뀐거 입니다

--- a/Project1/aboutUs2.html
+++ b/Project1/aboutUs2.html
@@ -24,7 +24,7 @@
         <div></div>
         <div class = "signUpceateAccount">
             <div><a href = "login.html"><h5>로그인</h5></a></div>
-            <div><h5>회원가입</h5></div>
+            <div><a href = "signIn.html"><h5>회원가입</h5></a></div>
         </div>
         <div></div>
     </div>
@@ -36,6 +36,14 @@
     <h1 class="title">ITEM 관련 사이트</h1>
     <div class="box2">
         ITEM 유튜브: <a href="https://www.youtube.com/@ITEM-2414" target="_blank">
-        https://www.youtube.com/@ITEM-2414
+        https://www.youtube.com/@ITEM-2414</a></div>
+
+    <div class = "justBitEmpty"></div>
+    <div class="downBar">
+        <p>&nbsp;&nbsp; : &nbsp;&nbsp; 회사명: ITEM &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; 주소: 충청남도 논산시 벌곡면 함삽천리 황룡재로 324</p>
+        <p>&nbsp;&nbsp; : &nbsp;&nbsp; 팩스: 000) 000-0000 &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; 사업자 등록 번호: 000-00-00000</p>
+        <p>&nbsp;&nbsp; : &nbsp;&nbsp; 대표: 조건호 &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; 전화: 000)000-0000 &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; 이메일: imitem2414@gmail.com</p>
+        <p>&nbsp;&nbsp; : &nbsp;&nbsp; 통신판매신고번호: 논산 삼천리 &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;개인정보 책임자: 조건호</p>
+    </div>    
 </body>
 </html>
