--- a/Project1/category.html
+++ b/Project1/category.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href = "stylemain.css" rel="stylesheet">
+    <link href = "category.css" rel="stylesheet">
 </head>
 <body>
     <div class = "menu">
@@ -28,5 +28,96 @@
         </div>
         <div></div>
     </div>
+
+    <h2>카테고리</h2>
+
+    <div class="kindOfLecture">
+        <div id="html"><a href = "categoryLecturePageOfHtml.html">HTML</a></div> 
+        <div>|</div> 
+        <div id="css" ><a href="categoryLecturePageOfCss.html">CSS</a></div> 
+        <div>|</div> 
+        <div id="jvs"><a href="categoryLecturePageOfJvs.html">JVS</a></div>
+    </div>
+    
+
+    <div class="bestPick">
+
+        <div class="course-card-container">
+            <article class="course-card">
+                <div class="course-image">
+                    <img src="thumnail.png" alt="강의 썸네일 1">
+                </div>
+                <div class="course-title">
+                    <h3>강의 제목 1</h3>
+                </div>
+                <div class="realDiscription">
+                    <p>여기에 강의 설명이 들어갑니다.</p>
+                </div>
+            </article>
+        </div>
+
+        <div class="course-card-container">
+            <article class="course-card">
+                <div class="course-image">
+                    <img src="thumnail.png" alt="강의 썸네일 2">
+                </div>
+                <div class="course-title">
+                    <h3>강의 제목 2</h3>
+                </div>
+                <div class="realDiscription">
+                    <p>여기에 강의 설명이 들어갑니다.</p>
+                </div>
+            </article>
+        </div>
+
+        <div class="course-card-container">
+            <article class="course-card">
+                <div class="course-image">
+                    <img src="thumnail.png" alt="강의 썸네일 3">
+                </div>
+                <div class="course-title">
+                    <h3>강의 제목 3</h3>
+                </div>
+                <div class="realDiscription">
+                    <p>여기에 강의 설명이 들어갑니다.</p>
+                </div>
+            </article>
+        </div>
+
+        <div class="course-card-container">
+            <article class="course-card">
+                <div class="course-image">
+                    <img src="thumnail.png" alt="강의 썸네일 3">
+                </div>
+                <div class="course-title">
+                    <h3>강의 제목 4</h3>
+                </div>
+                <div class="realDiscription">
+                    <p>여기에 강의 설명이 들어갑니다.</p>
+                </div>
+            </article>
+        </div>
+        <div class="course-card-container">
+            <article class="course-card">
+                <div class="course-image">
+                    <img src="thumnail.png" alt="강의 썸네일 3">
+                </div>
+                <div class="course-title">
+                    <h3>강의 제목 5</h3>
+                </div>
+                <div class="course-discription">
+                    <p class="realDiscription">여기에 강의 설명이 들어갑니다.</p>
+                </div>
+            </article>
+        </div>
+    </div>
+
+    <div class = "justBitEmpty"></div>
+    <div class="downBar">
+        <p>&nbsp;&nbsp; : &nbsp;&nbsp; 회사명: ITEM &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; 주소: 충청남도 논산시 벌곡면 함삽천리 황룡재로 324</p>
+        <p>&nbsp;&nbsp; : &nbsp;&nbsp; 팩스: 000) 000-0000 &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; 사업자 등록 번호: 000-00-00000</p>
+        <p>&nbsp;&nbsp; : &nbsp;&nbsp; 대표: 조건호 &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; 전화: 000)000-0000 &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; 이메일: imitem2414@gmail.com</p>
+        <p>&nbsp;&nbsp; : &nbsp;&nbsp; 통신판매신고번호: 논산 삼천리 &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;개인정보 책임자: 조건호</p>
+    </div>    
 </body>
 </html>
