--- a/Project1/categoryLecturePageOfHtml.html
+++ b/Project1/categoryLecturePageOfHtml.html
@@ -111,5 +111,13 @@
             </article>
         </div>
     </div>
+
+    <div class = "justBitEmpty"></div>
+    <div class="downBar">
+        <p>&nbsp;&nbsp; : &nbsp;&nbsp; 회사명: ITEM &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; 주소: 충청남도 논산시 벌곡면 함삽천리 황룡재로 324</p>
+        <p>&nbsp;&nbsp; : &nbsp;&nbsp; 팩스: 000) 000-0000 &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; 사업자 등록 번호: 000-00-00000</p>
+        <p>&nbsp;&nbsp; : &nbsp;&nbsp; 대표: 조건호 &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; 전화: 000)000-0000 &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; 이메일: imitem2414@gmail.com</p>
+        <p>&nbsp;&nbsp; : &nbsp;&nbsp; 통신판매신고번호: 논산 삼천리 &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;개인정보 책임자: 조건호</p>
+    </div>
 </body>
 </html>
