--- a/Project1/Bestpick.html
+++ b/Project1/Bestpick.html
@@ -32,7 +32,7 @@
     <div class="bestPick">
         <h2>인기강의</h2>
 
-        <div class="course-card-container">
+        <a href = Mylecture.html><div class="course-card-container">
             <article class="course-card">
                 <div class="course-image">
                     <img src="thumnail.png" alt="강의 썸네일 1">
@@ -44,9 +44,9 @@
                     <p>여기에 강의 설명이 들어갑니다.</p>
                 </div>
             </article>
-        </div>
+        </div></a>
 
-        <div class="course-card-container">
+        <a href = Mylecture.html><div class="course-card-container">
             <article class="course-card">
                 <div class="course-image">
                     <img src="thumnail.png" alt="강의 썸네일 2">
@@ -58,9 +58,9 @@
                     <p>여기에 강의 설명이 들어갑니다.</p>
                 </div>
             </article>
-        </div>
+        </div></a>
 
-        <div class="course-card-container">
+        <a href = Mylecture.html><div class="course-card-container">
             <article class="course-card">
                 <div class="course-image">
                     <img src="thumnail.png" alt="강의 썸네일 3">
@@ -72,9 +72,9 @@
                     <p>여기에 강의 설명이 들어갑니다.</p>
                 </div>
             </article>
-        </div>
+        </div></a>
 
-        <div class="course-card-container">
+        <a href = Mylecture.html><div class="course-card-container">
             <article class="course-card">
                 <div class="course-image">
                     <img src="thumnail.png" alt="강의 썸네일 3">
@@ -86,8 +86,8 @@
                     <p>여기에 강의 설명이 들어갑니다.</p>
                 </div>
             </article>
-        </div>
-        <div class="course-card-container">
+        </div></a>
+        <a href = Mylecture.html><div class="course-card-container">
             <article class="course-card">
                 <div class="course-image">
                     <img src="thumnail.png" alt="강의 썸네일 3">
@@ -99,7 +99,7 @@
                     <p class="realDiscription">여기에 강의 설명이 들어갑니다.</p>
                 </div>
             </article>
-        </div>
+        </div></a>
     </div>
 
     <div class = "justBitEmpty"></div>
