--- a/Project1/Mylecture.html
+++ b/Project1/Mylecture.html
@@ -24,8 +24,7 @@
             </div>            
             <div></div>
             <div class = "signUpceateAccount">
-                <div><a href = "login.html"><h5>로그인</h5></a></div>
-                <div><a href = "signIn.html"><h5>회원가입</h5></a></div>
+                <div><a href = "mainpage.html"><h5>로그아웃</h5></a></div>
             </div>
             <div></div>
         </div>
