--- a/Project1/category.html
+++ b/Project1/category.html
@@ -42,7 +42,7 @@
 
     <div class="bestPick">
 
-        <div class="course-card-container">
+        <a href = Mylecture.html><div class="course-card-container">
             <article class="course-card">
                 <div class="course-image">
                     <img src="thumnail.png" alt="강의 썸네일 1">
@@ -54,9 +54,9 @@
                     <p>여기에 강의 설명이 들어갑니다.</p>
                 </div>
             </article>
-        </div>
+        </div></a>
 
-        <div class="course-card-container">
+        <a href = Mylecture.html><div class="course-card-container">
             <article class="course-card">
                 <div class="course-image">
                     <img src="thumnail.png" alt="강의 썸네일 2">
@@ -68,9 +68,9 @@
                     <p>여기에 강의 설명이 들어갑니다.</p>
                 </div>
             </article>
-        </div>
+        </div></a>
 
-        <div class="course-card-container">
+        <a href = Mylecture.html><div class="course-card-container">
             <article class="course-card">
                 <div class="course-image">
                     <img src="thumnail.png" alt="강의 썸네일 3">
@@ -82,9 +82,9 @@
                     <p>여기에 강의 설명이 들어갑니다.</p>
                 </div>
             </article>
-        </div>
+        </div></a>
 
-        <div class="course-card-container">
+        <a href = Mylecture.html><div class="course-card-container">
             <article class="course-card">
                 <div class="course-image">
                     <img src="thumnail.png" alt="강의 썸네일 3">
@@ -96,8 +96,8 @@
                     <p>여기에 강의 설명이 들어갑니다.</p>
                 </div>
             </article>
-        </div>
-        <div class="course-card-container">
+        </div></a>
+        <a href = Mylecture.html><div class="course-card-container">
             <article class="course-card">
                 <div class="course-image">
                     <img src="thumnail.png" alt="강의 썸네일 3">
@@ -109,7 +109,7 @@
                     <p class="realDiscription">여기에 강의 설명이 들어갑니다.</p>
                 </div>
             </article>
-        </div>
+        </div></a>
     </div>
 
     <div class = "justBitEmpty"></div>
