--- a/Project1/categoryLecturePageOfJvs.html
+++ b/Project1/categoryLecturePageOfJvs.html
@@ -42,74 +42,74 @@
 
     <div class="bestPick">
 
-        <div class="course-card-container">
+        <a href = Mylecture.html><div class="course-card-container">
             <article class="course-card">
                 <div class="course-image">
                     <img src="thumnail.png" alt="강의 썸네일 1">
                 </div>
                 <div class="course-title">
-                    <h3>강의 제목 1</h3>
+                    <h3>JVS 강의 제목 1</h3>
                 </div>
                 <div class="realDiscription">
                     <p>여기에 강의 설명이 들어갑니다.</p>
                 </div>
             </article>
-        </div>
+        </div></a>
 
-        <div class="course-card-container">
+        <a href = Mylecture.html><div class="course-card-container">
             <article class="course-card">
                 <div class="course-image">
                     <img src="thumnail.png" alt="강의 썸네일 2">
                 </div>
                 <div class="course-title">
-                    <h3>강의 제목 2</h3>
+                    <h3>JVS 강의 제목 2</h3>
                 </div>
                 <div class="realDiscription">
                     <p>여기에 강의 설명이 들어갑니다.</p>
                 </div>
             </article>
-        </div>
+        </div></a>
 
-        <div class="course-card-container">
+        <a href = Mylecture.html><div class="course-card-container">
             <article class="course-card">
                 <div class="course-image">
                     <img src="thumnail.png" alt="강의 썸네일 3">
                 </div>
                 <div class="course-title">
-                    <h3>강의 제목 3</h3>
+                    <h3>JVS 강의 제목 3</h3>
                 </div>
                 <div class="realDiscription">
                     <p>여기에 강의 설명이 들어갑니다.</p>
                 </div>
             </article>
-        </div>
+        </div></a>
 
-        <div class="course-card-container">
+        <a href = Mylecture.html><div class="course-card-container">
             <article class="course-card">
                 <div class="course-image">
                     <img src="thumnail.png" alt="강의 썸네일 3">
                 </div>
                 <div class="course-title">
-                    <h3>강의 제목 4</h3>
+                    <h3>JVS 강의 제목 4</h3>
                 </div>
                 <div class="realDiscription">
                     <p>여기에 강의 설명이 들어갑니다.</p>
                 </div>
             </article>
-        </div>
-        <div class="course-card-container">
+        </div></a>
+        <a href = Mylecture.html><div class="course-card-container">
             <article class="course-card">
                 <div class="course-image">
                     <img src="thumnail.png" alt="강의 썸네일 3">
                 </div>
                 <div class="course-title">
-                    <h3>강의 제목 5</h3>
+                    <h3>JVS 강의 제목 5</h3>
                 </div>
                 <div class="course-discription">
                     <p class="realDiscription">여기에 강의 설명이 들어갑니다.</p>
                 </div>
             </article>
-        </div>
+        </div></a>
     </div>
 
     <div class = "justBitEmpty"></div>
