--- a/Project1/categoryLecturePageOfHtml.html
+++ b/Project1/categoryLecturePageOfHtml.html
@@ -15,7 +15,7 @@
         <div class = "inSidePage">
             <div><a href = "bestPick.html"><h5>인기강의</h5></a></div>
             <div><a href = "category.html"><h5>카테고리</h5></a></div>
-            <div><a href = "aboutUs.html"><h5>ABOUT US</h5></a></div>
+            <div><a href = "aboutUs2.html"><h5>ABOUT US</h5></a></div>
         </div>
         <div class="searchBar">
             <input type="text" id="searchInput" placeholder="Search" required>
